--- a/style.css
+++ b/style.css
@@ -75,4 +75,17 @@ body {
     text-align: center;
     padding: 10px;
   }
+  .container {
+    display: flex;
+    align-items: center; 
+  }
+  
+  .image {
+    width: 200px; 
+    margin-right: 20px; 
+  }
+  
+  .text {
+    flex-grow: 1; 
+  }
   
